# Scholar-MCP

./: .gitignore  README.md  pyproject.toml
examples/: claude.mcp.json  opencode.json  vscode.mcp.json
scholar_mcp/: config.py  models.py  scholar_client.py  scholar_parser.py  server.py
