[project]
name = "scholar-mcp"
version = "0.1.0"
description = "Local MCP server for Google Scholar topic and author paper discovery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.12.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
]

[project.scripts]
scholar-mcp = "scholar_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scholar_mcp*"]
